# WaterSIC-Unofficial

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  pyproject.toml
archive/: README.md
archive/docs/: reproduction_log_full.md
configs/debug/: llama32_1b_layer0_attention.yaml  llama32_1b_layer0_attention_refsafe_large.yaml  llama32_1b_layer1_o_proj_residual.yaml
configs/env/: watersic_conda.yml
configs/eval/: wikitext2.yaml  wikitext2_smoke8.yaml  wikitext2_validation.yaml
configs/models/: llama31_8b.yaml  llama31_8b_local.yaml  llama32_1b.yaml  llama3_8b.yaml  qwen3_8b.yaml
configs/paper_comparable/: README.md
configs/quant/: watersic_default.yaml  watersic_llama32_1b.yaml  (+20 more)
docs/: algorithm.md  algorithm_notes.md  artifacts.md  benchmarking.md  calibration.md  calibration_pipeline.md  checkpointing.md  configuration.md  evaluation.md  implementation_plan.md  known_issues.md  quantization.md  quantization_pipeline.md  report_format.md  reproduction_log.md  results.md  troubleshooting.md
scripts/: benchmark_model.py  collect_calibration.py  debug_layer0_attention.py  debug_o_proj_residual.py  download_model.py  launch_when_idle.py  make_report.py  quantize_model.py  run_experiment.py  setup_env.sh
tests/: test_attention_mixing.py  test_attention_weighting.py  test_checkpoint.py  test_dead_features.py  test_device.py  test_huffman.py  test_lmmse.py  test_path_guard.py  test_perplexity.py  test_rate_search.py  test_rescalers.py  test_residual.py  test_watersic_layer.py  test_watersic_model.py  test_wikitext2.py  test_zsic.py
(+131 files in other folders)
